fix margins and spacing

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
     font-family: 'Nunito', sans-serif;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-content: space-between;
     height: 100vh;
     margin: 0;
     background-color: #fbfbfb;
@@ -22,7 +22,6 @@ body {
 
 .welcome {
     text-align: center;
-    margin: 20px;
     padding: 10px;
     background-color: #f5f5f5;
     border-radius: 8px;
@@ -46,11 +45,11 @@ body {
 .todo-container {
     background: #fff;
     padding: 5%;
-    margin: 0% 5% 1% 5%;
+    margin: 0% 5%;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     width: 80%;
-    max-width: 400px;
+    max-width: 800px;
 }
 
 .todo-header {
